# tana-forecast

./: .gitignore  README.md  pyproject.toml
src/: model.py  trainer.py  training_pipeline.py  utils.py  visualization.py
src/exploration/: delhi.ipynb
src/logs/: training_logs.csv
src/models/: model.py
